# atmel-start

./: go.mod  go.sum  project.js  project.json  readme.md
atmelstart/: Gopkg.toml  atmelstart.go  config.go  config_test.go  editor.go  makefile.go  templates.go
atmelstart/cmd/atmel-start/: main.go
atmelstart/cmd/atmel-start/cmd/: configure.go  generate.go  init.go  open.go  pull.go  root.go
atmelstart/cmd/atmelstart2cmake/: main.go
atmelstart/cmd/atstart/: main.go
atmelstart/cmd/atstart/cmd/: cmake.go  init.go  open.go  pull.go  root.go
atmelstart/templates/: CMakeLists.txt  toolchain.cmake
atmelstart/testdata/: .gitignore  config.json
example/: .gitignore  CMakeLists.txt  atstart.yaml  main.c  readme.md
example/.atstart/: AtmelStart.env_conf  AtmelStart.gpdsc  atmel_start_config.atstart  toolchain.cmake
example/.atstart/gcc/: Makefile
example/.atstart/gcc/dev/atmega128/device-specs/: specs-atmega128
example/.atstart/iar/: Makefile  avr8_iar.xcl
example/.atstart/include/: component-version.h  driver_init.h  port.h  sysctrl.h  system.h
example/.atstart/include/avr/: io90pwm1.h  io90pwm161.h  io90pwm216.h  io90pwm2b.h  io90pwm316.h  io90pwm3b.h  io90pwm81.h  iom128.h  iom1284.h  iom1284rfr2.h  iom128a.h  iom128rfr2.h  iom164pa.h  iom165a.h  iom165pa.h  iom168pa.h  iom168pb.h  iom169a.h  iom169pa.h  iom2564rfr2.h  iom256rfr2.h  iom3208.h  iom3209.h  iom324a.h  iom324p.h  iom324pb.h  iom3250pa.h  iom325pa.h  iom328pb.h  iom3290pa.h  iom329p.h  iom32a.h  iom4808.h  iom4809.h  iom48pa.h  iom48pb.h  iom644rfr2.h  iom64a.h  iom64hve2.h  iom64rfr2.h  (+2 more)
example/.atstart/src/: driver_init.c
example/lib/atmel_start/: AtmelStart.gpdsc  CMakeLists.txt  atmel_start_pins.h  driver_init.c  toolchain.cmake
example/lib/atmel_start/armcc/: Makefile
example/lib/atmel_start/hpl/core/: hpl_init.c
example/lib/atmel_start/hpl/dmac/: hpl_dmac.c
example/lib/atmel_start/hpl/gclk/: hpl_gclk.c
example/lib/atmel_start/hpl/sysctrl/: hpl_sysctrl.c
example/lib/atmel_start/samd21a/gcc/gcc/: samd21g18a_flash.ld  samd21g18a_sram.ld
example/lib/atmel_start/samd21a/include/: component-version.h  samd21.h  samd21e15a.h  samd21e16a.h  samd21e17a.h  samd21e18a.h  samd21g15a.h  samd21g16a.h  samd21g17a.h  samd21g17au.h  samd21g18a.h  samd21g18au.h  samd21j15a.h  samd21j16a.h  samd21j17a.h  samd21j18a.h  system_samd21.h
example/lib/atmel_start/samd21a/include/component/: ac.h  adc.h  dac.h  dmac.h  dsu.h  eic.h  evsys.h  gclk.h  hmatrixb.h  i2s.h  mtb.h  nvmctrl.h  pac.h  pm.h  port.h  rtc.h  sercom.h  sysctrl.h  tc.h  tcc.h  usb.h  wdt.h
example/lib/atmel_start/samd21a/include/instance/: ac.h  adc.h  dac.h  dmac.h  dsu.h  eic.h  evsys.h  gclk.h  i2s.h  mtb.h  nvmctrl.h  pac0.h  pac1.h  pac2.h  pm.h  port.h  rtc.h  sbmatrix.h  sercom0.h  sercom1.h  sercom2.h  sercom3.h  sercom4.h  sercom5.h  sysctrl.h  tc3.h  tc4.h  tc5.h  tc6.h  tc7.h  tcc0.h  tcc1.h  tcc2.h  usb.h  wdt.h
example/lib/atmel_start/samd21a/include/pio/: samd21e15a.h  samd21e16a.h  samd21e17a.h  samd21e18a.h  samd21g15a.h  samd21g16a.h  samd21g17a.h  samd21g17au.h  samd21g18a.h  samd21g18au.h  samd21j15a.h  samd21j16a.h  samd21j17a.h  samd21j18a.h
example/src/: main.c
